# fast-pptx-pdf

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: prepublish.ps1  prepublish.sh
src/fast_pptx_pdf/: __init__.py  api.py  cli.py  converter.py  exceptions.py  libreoffice.py  pool.py  process.py  profiles.py
src/fast_pptx_pdf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_api.py  test_cli.py  test_converter.py  test_libreoffice.py  test_pool.py  test_process.py  test_profiles.py
