[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-pptx-pdf"
version = "0.1.4"
description = "Convert PPTX to PDF using LibreOffice headless mode with safe parallel conversion"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "fast-pptx-pdf contributors" }]
keywords = ["pptx", "pdf", "libreoffice", "conversion", "parallel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[project.scripts]
fast-pptx-pdf = "fast_pptx_pdf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
